--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "server-tf2",
+  "name": "tf2-json-server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "body-parser": "^2.2.0",
-    "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^4.18.2",
+    "fs-extra": "^11.1.1",
+    "cors": "^2.8.5"
   }
 }
