--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "fs-extra": "^11.1.1",
-    "cors": "^2.8.5"
+    "sqlite3": "^5.1.7"
   }
 }
